...
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/monthlyLimitsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monthlyLimits"
            android:padding="10dp"
            android:layout_marginTop="20dp"/>

...
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/savingGoalsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/savingGoals"
            android:padding="10dp"
            android:layout_marginTop="20dp"/>

...
