<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mnItmGraphs"
        android:title="@string/mnItmGraphs" />
    <item
        android:id="@+id/mnItmLimits"
        android:title="@string/mnItmLimitsGoals" />

</menu>